@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T16:30:17Z",
+  "timestamp" : "2022-05-11T01:48:21Z",
   "count_outdated" : 1825,
   "uniques_outdated" : 363,
-  "count" : 2093,
-  "uniques" : 393,
+  "count" : 2099,
+  "uniques" : 397,
   "clones" : [
     {
       "timestamp": "2022-04-27T00:00:00Z",
@@ -77,10 +77,10 @@
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 0, 6 ],
-      "uniques": 3,
-      "uniques_minmax": [ 0, 3 ]
+      "count": 12,
+      "count_minmax": [ 0, 12 ],
+      "uniques": 7,
+      "uniques_minmax": [ 0, 7 ]
     }
   ]
 }
